--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Generated files
+src/generated/
+src/generated/client/
+
 # dependencies
 /node_modules
 /.pnp
@@ -19,9 +23,6 @@
 
 # production
 /build
-
-src/generated
-
 # misc
 .DS_Store
 *.pem
