--- a/package.json
+++ b/package.json
@@ -40,10 +40,14 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tremor/react": "^3.18.7",
+    "@types/react-color": "^3.0.13",
+    "@types/react-tag-input": "^6.6.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "colorthief": "^2.6.0",
+    "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
@@ -52,11 +56,15 @@
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
+    "react-datetime-picker": "^6.0.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
+    "react-tag-input": "6.9.0",
     "recharts": "^2.15.2",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.3",
     "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
