--- a/package.json
+++ b/package.json
@@ -7,111 +7,114 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --project tsconfig-seed.json prisma/seed.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.6",
-    "@elastic/elasticsearch": "^8.16.2",
+    "@clerk/nextjs": "^6.19.4",
+    "@elastic/elasticsearch": "^8.18.2",
     "@hookform/resolvers": "^3.6.0",
     "@paypal/react-paypal-js": "^8.7.0",
-    "@prisma/client": "^5.15.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@prisma/client": "^6.8.2",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-aspect-ratio": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-collapsible": "^1.1.10",
+    "@radix-ui/react-context-menu": "^2.2.14",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-menubar": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slider": "^1.3.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-toggle": "^1.1.8",
+    "@radix-ui/react-toggle-group": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@react-pdf/renderer": "^4.1.5",
     "@stripe/react-stripe-js": "^3.0.0",
-    "@stripe/stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-table": "^8.17.3",
     "@tremor/react": "^3.18.3",
     "@types/dompurify": "^3.0.5",
     "@types/react-color": "^3.0.12",
     "@types/react-tag-input": "^6.6.6",
-    "@types/uuid": "^10.0.0",
+    "@types/uuid": "^9.0.8",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/functions": "^1.5.2",
+    "@vercel/functions": "^2.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "colorthief": "^2.4.0",
-    "cookies-next": "^4.3.0",
+    "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.1.7",
     "embla-carousel-react": "^8.1.5",
     "flag-icons": "^7.2.3",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.12.1",
     "input-otp": "^1.2.4",
-    "jodit-react": "^4.1.2",
-    "lucide-react": "^0.394.0",
-    "next": "^14.2.4",
+    "jodit-react": "^5.2.19",
+    "lucide-react": "^0.511.0",
+    "next": "^15.3.2",
     "next-cloudinary": "^6.6.2",
     "next-share": "^0.27.0",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
-    "react": "^18",
+    "react": "^19.1.0",
     "react-awesome-slider": "^4.1.0",
     "react-color": "^2.19.3",
     "react-content-loader": "^7.0.2",
     "react-datetime-picker": "^6.0.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.4.1",
     "react-image-zooom": "^1.3.5",
     "react-loading-skeleton": "^3.5.0",
     "react-multi-select-component": "^4.3.4",
     "react-rating-stars-component": "^2.2.0",
-    "react-resizable-panels": "^2.0.19",
+    "react-resizable-panels": "^3.0.2",
     "react-responsive": "^10.0.0",
-    "react-spinners": "^0.15.0",
-    "react-tag-input": "6.9.0",
+    "react-spinners": "^0.17.0",
+    "react-tag-input": "^6.10.6",
     "slugify": "^1.6.6",
     "social-logos": "^3.1.8",
-    "sonner": "^1.5.0",
-    "stripe": "^17.4.0",
-    "svix": "^1.24.0",
+    "sonner": "^2.0.3",
+    "stripe": "^18.1.1",
+    "svix": "^1.65.0",
     "swiper": "^11.1.15",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "use-onclickoutside": "^0.4.1",
-    "uuid": "^10.0.0",
-    "vaul": "^0.9.1",
-    "zod": "^3.23.8",
+    "uuid": "^9.0.1",
+    "vaul": "^1.1.2",
+    "zod": "^3.25.4",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "bcrypt": "^6.0.0",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "^15.3.2",
     "postcss": "^8",
-    "prisma": "^5.15.0",
-    "tailwindcss": "^3.4.1",
+    "prisma": "^6.8.2",
+    "tailwindcss": "3.4.1",
     "typescript": "^5"
   }
 }
