--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && npm install --legacy-peer-deps --force && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node --project tsconfig-seed.json prisma/seed.ts"
@@ -90,6 +90,7 @@
     "react-responsive": "^10.0.0",
     "react-spinners": "^0.17.0",
     "react-tag-input": "^6.10.6",
+    "sharp": "^0.34.1",
     "slugify": "^1.6.6",
     "social-logos": "^3.1.8",
     "sonner": "^2.0.3",
