--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && npm install --legacy-peer-deps --force && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node --project tsconfig-seed.json prisma/seed.ts"
@@ -71,7 +71,7 @@
     "next-share": "^0.27.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
     "react-color": "^2.19.3",
     "react-content-loader": "^7.0.2",
@@ -79,7 +79,7 @@
     "react-day-picker": "^9.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.4.1",
     "react-image-zooom": "^1.3.5",
@@ -110,8 +110,8 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.15.19",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "bcrypt": "^6.0.0",
     "eslint": "^9.27.0",
     "eslint-config-next": "^15.3.2",
@@ -122,22 +122,22 @@
   },
   "overrides": {
     "@tremor/react": {
-      "react": "^19.1.0",
-      "react-dom": "^19.1.0"
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
     },
     "react-multi-select-component": {
-      "react": "^19.1.0",
-      "react-dom": "^19.1.0"
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
     },
     "react-tag-input": {
-      "react": "^19.1.0",
-      "react-dom": "^19.1.0"
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
     },
     "react-dnd": {
-      "react": "^19.1.0"
+      "react": "^18.3.1"
     },
     "react-dnd-html5-backend": {
-      "react": "^19.1.0"
+      "react": "^18.3.1"
     }
   }
 }
